# Worldcup-Prediction

./: .editorconfig  .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
data/raw/: README.md
notebooks/: WC_prediction.ipynb
reports/: model_report.html  predictor.html
src/: cross_validation.py  data_prep.py  metrics.py  model.py  train.py
tests/: test_model.py
